--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
       <span class="psw" style = "display: inline;"><a href="#" style="color: forestgreen; text-decoration:none">Forgot password?</a></span>
 
     </div>
-    <span class="register">Not registered? <a href="#" style="color: forestgreen; text-decoration:none">Create an account</a></span>
+    <span class="register">Not registered? <a href="#" style="color: forestgreen; text-decoration:none; margin: 58px;">Create an account</a></span>
     </label>
   </div>
 
